build: adding form style globaly

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,3 +7,10 @@ body,
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
+
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 26px;
+  align-items: center;
+}
